// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aborts request when sending new message while waiting for response 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "First message",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second message while first is pending",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second response that should be shown",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`aborts tool use when sending new message while tool is executing 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Run a slow command",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll run a slow bash command for you.",
        "type": "text",
      },
      {
        "id": "slow-bash-command",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "slow-bash-command",
            "input": {
              "command": "sleep 5 && echo 'This should be aborted'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
    "stopReason": "tool_use",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "id": "slow-bash-command",
        "result": {
          "error": "Request was aborted by the user.",
          "status": "error",
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Cancel that, run something else",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > fork-tool-request-messages 1`] = `
[
  {
    "content": [
      {
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "Let me check if I can find some information about Germany in your system.",
        "type": "text",
      },
      {
        "id": "first-bash-tool",
        "input": {
          "command": "echo 'Information about Germany'",
        },
        "name": "bash_command",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "stdout:
Information about Germany
exit code 0 (14ms)

Full output (1 lines): /tmp/magenta/threads/<thread-id>/tools/first-bash-tool/bashCommand.log",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "first-bash-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "Let me check for more details about European countries.",
        "type": "text",
      },
      {
        "id": "second-bash-tool",
        "input": {
          "command": "echo 'European countries information'",
        },
        "name": "bash_command",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "stdout:
European countries information
exit code 0 (10ms)

Full output (1 lines): /tmp/magenta/threads/<thread-id>/tools/second-bash-tool/bashCommand.log",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "second-bash-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "test bash tool",
        "type": "text",
      },
      {
        "id": "bash-tool",
        "input": {
          "command": "echo test",
        },
        "name": "bash_command",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "stdout:
test
exit code 0 (12ms)

Full output (1 lines): /tmp/magenta/threads/<thread-id>/tools/bash-tool/bashCommand.log",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "bash-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "My next prompt will be:
Tell me about Italy

Use the fork_thread tool to start a new thread for this prompt.

- Carefully analyze the prompt
- Identify key concepts, patterns, files and decisions that may be relevant
- Include higly relevant files as contextFiles
- Name less relevant files that may be useful in the summary, but leave them out of contextFiles.
- Summarize ONLY information that directly supports addressing the next prompt, especially previous user instructions and observations that cannot be directly observable in the codebase.
- Prefer including files in contextFiles to copying code from those files into the summary. Do not repeat anything in the summary that can be learned directly from contextFiles.

You must use the fork_thread tool immediately, with only the information you already have. Do not use any other tools.",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > forked-thread-messages 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
File \`poem.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

File \`poem2.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

</context_update>",
        "type": "context_update",
      },
      {
        "citations": undefined,
        "text": "# Previous thread summary:
We discussed European capitals (France: Paris, Germany: Berlin) and examined your project structure, which contains TypeScript files.
# The user would like you to address this prompt next:
",
        "type": "text",
      },
      {
        "citations": undefined,
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Italy's capital is Rome. It's known for its rich history, art, and cuisine.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`handles @async messages and sends them on end turn 1`] = `
[
  {
    "content": [
      {
        "text": "Tell me about TypeScript",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "TypeScript is a typed superset of JavaScript.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Also tell me about JavaScript",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`handles @async messages by queueing them and sending on next tool response 1`] = `
[
  {
    "content": [
      {
        "text": "Can you read my secret file?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "secret-file-tool",
        "input": {
          "filePath": ".secret",
        },
        "name": "get_file",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "secret secrets are no fun
",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "secret-file-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "This should be queued",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;
